--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <section class="attribution">
       <span>
         <h1>PiranhaXR</h1>
-        <span>Click AR if you device not<br>support XR<img src="modelviewer.png" alt="sketchfab logo"><a href="https://oceanariummelaka.github.io/piranhaplus/" target="_blank"><h1>AR</h1></a></span>Then point your device to QR Marker and move it slowly.
+        <span>Click AR if your device not<br>support XR<img src="modelviewer.png" alt="sketchfab logo"><a href="https://oceanariummelaka.github.io/piranhaplus/" target="_blank"><h1>AR</h1></a></span>Then point your device to QR Marker and move it slowly.
 <p><h2>Piranha Fact</h2><br> Piranhas are well known for their razor sharp teeth, and have a reputation for having voracious appetites. Although they are known to occasionally attack large animals, the reputation is greatly exaggerated. 
 <br> Most adult piranhas - depending on the species - eat fruit, seeds, and fish. Some have been found with bird fragments, snakes, and small mammals in their stomachs. Young piranhas may eat copepods, crustaceans, and insects.  </p>
 <p>Click🔈if sound not load<a href="https://oceanariummelaka.github.io/piranha/" target="_blank"><h1>🔈</h1></a></p>
